Fixes #13