@@ -1,7 +1,6 @@
 package net.mcreator.packloader;
 
 import net.minecraftforge.fml.loading.FMLPaths;
-import net.minecraftforge.fml.javafmlmod.FMLJavaModLoadingContext;
 import net.minecraftforge.fml.event.lifecycle.FMLClientSetupEvent;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
@@ -11,47 +10,47 @@ import net.minecraft.client.Minecraft;
 
 import java.util.List;
 import java.util.LinkedList;
+import java.util.Collection;
 import java.util.ArrayList;
-
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import java.io.File;
 
 @Mod(PackLoaderMod.MODID) public class PackLoaderMod {
 
-	public static final String MODID = "packloader";
+    public static final String MODID = "packloader";
 
-	@Mod.EventBusSubscriber(modid = MODID, bus = Mod.EventBusSubscriber.Bus.MOD, value = Dist.CLIENT)
-	public static class ClientModEvents {
-		@SubscribeEvent public static void onClientSetup(FMLClientSetupEvent event) {
-			List<String> resourcePacks = new ArrayList<>();
-			var resourcePacksPath = FMLPaths.getOrCreateGameRelativePath(Path.of("resourcepacks"), "resourcepacks");
-			if (resourcePacksPath.toFile().exists()) {
-				File[] files = resourcePacksPath.toFile().listFiles();
-				if (files != null) {
-					for (var file : files) {
-						resourcePacks.add(file.getName());
-					}
-				}
-			}
+    @Mod.EventBusSubscriber(modid = MODID, bus = Mod.EventBusSubscriber.Bus.MOD, value = Dist.CLIENT)
+    public static class ClientModEvents {
+        @SubscribeEvent public static void onClientSetup(FMLClientSetupEvent event) {
+            List<String> resourcePacks = new ArrayList<>();
+            Path resourcePacksPath = FMLPaths.getOrCreateGameRelativePath(Paths.get("resourcepacks"), "resourcepacks");
+            if (resourcePacksPath.toFile().exists()) {
+                File[] files = resourcePacksPath.toFile().listFiles();
+                if (files != null) {
+                    for (File file : files) {
+                        resourcePacks.add(file.getName());
+                    }
+                }
+            }
 
-			boolean anyChanged = false;
-			List<String> selectedPacks = new LinkedList<>(Minecraft.getInstance().getResourcePackRepository().getSelectedIds());
-			var allPacks = Minecraft.getInstance().getResourcePackRepository().getAvailableIds();
-			for (String pack : allPacks) {
-				for (String resourcePack : resourcePacks) {
-					if (pack.contains(resourcePack)) {
-						anyChanged = true;
-						selectedPacks.add(pack);
-					}
-				}
-			}
+            boolean anyChanged = false;
+            List<String> selectedPacks = new LinkedList<>(Minecraft.getInstance().getResourcePackRepository().getSelectedIds());
+            Collection<String> allPacks = Minecraft.getInstance().getResourcePackRepository().getAvailableIds();
+            for (String pack : allPacks) {
+                for (String resourcePack : resourcePacks) {
+                    if (pack.contains(resourcePack)) {
+                        anyChanged = true;
+                        selectedPacks.add(pack);
+                    }
+                }
+            }
 
-			if (anyChanged) {
-				Minecraft.getInstance().getResourcePackRepository().setSelected(selectedPacks);
-				Minecraft.getInstance().options.loadSelectedResourcePacks(Minecraft.getInstance().getResourcePackRepository());
-			}
-		}
-	}
-
+            if (anyChanged) {
+                Minecraft.getInstance().getResourcePackRepository().setSelected(selectedPacks);
+                Minecraft.getInstance().options.loadSelectedResourcePacks(Minecraft.getInstance().getResourcePackRepository());
+            }
+        }
+    }
 }
